--- a/css/videoPlayer/tab-content.less
+++ b/css/videoPlayer/tab-content.less
@@ -40,7 +40,6 @@
 		.tab-pane.active #video-resource,
 		.tab-pane.active #video-segment {
 			height   : auto;
-			overflow : hidden;
 			position : relative;
 		}
 
@@ -63,13 +62,13 @@
 			width  : 285px !important;
 		}
 	}
+	ul {
+		list-style-type : none;
+	}
 
 	#video-resources {
 
 		.additional-resources {
-			li {
-				list-style : none;
-			}
 
 			i#icon {
 				font-size : 16px;
